# graphstorm

./: .gitlab-ci.yml  README.md  build_pip.sh  pyproject.toml  setup.py
.github/workflow_scripts/: pytest_check.sh
.github/workflows/: continuous-integration.yml
docker/: Dockerfile.ci  Dockerfile.pip  README.md  build_docker_oss4local.sh  build_docker_parmetis.sh  build_docker_sagemaker.sh  push_sm_container.sh
docker/local/: Dockerfile.local
docker/sagemaker/: Dockerfile.sm
graphstorm-processing/: pyproject.toml
graphstorm-processing/docker/: build_gsprocessing_image.sh  build_processing_sagemaker.sh  push_local_image.sh
graphstorm-processing/graphstorm_processing/: constants.py  distributed_executor.py  repartition_files.py
graphstorm-processing/scripts/: convert_gconstruct_config.py  run_distributed_processing.py
graphstorm-processing/tests/: conftest.py  test_dist_category_transformation.py  test_dist_executor.py  test_dist_heterogenous_loader.py  test_dist_label_loader.py  test_repartition_files.py
inference_scripts/ep_infer/: ep_infer_gnn.py  ep_infer_lm.py
inference_scripts/lp_infer/: lp_infer_gnn.py  lp_infer_lm.py
inference_scripts/np_infer/: np_infer_gnn.py
python/graphstorm/: __init__.py  gsf.py  utils.py
sagemaker/: Local testing with Docker compose.md  generate_sagemaker_parmetis_docker_compose.py  launch_parmetis.py  launch_partition.py  launcher_aws_utils.py  launcher_s3_utils.py  local_sagemaker_docker_build.sh  s3_utils.py
tools/: README.md  gen_mag_dataset.py  gen_ogb_dataset.py  partition_graph.py  partition_graph_lp.py
(+181 files in other folders)
