[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphstorm"
version = "0.0.1+95574d25"
authors = [
  { name="agml", email="agml@amazon.com" },
]
description = "The package for GraphStorm pip installation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/awslabs/graphstorm"
"Bug Tracker" = "https://github.com/awslabs/graphstorm/issues"